--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0px;
+    padding: 0px;
 }
+.web-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 32%;
+    margin-right: 32%;
+    gap: 15px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.body-text{
+    text-align: center;
+}
+.form-body{
+    display: flex;
+    padding: 20px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    flex-direction: column;
+    gap: 20px;
+    
+}
+.progress-bar-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navigate-btns{
+    display: flex;
+    width: 100%;
+    justify-content: end;
+    gap: 60%;
+}
+.prevBtn{
+    background-color: transparent;
+     border: 1px solid #4A3AFF; 
+     color: #4A3AFF;
 }
