--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -4,7 +4,7 @@ button{
     color: white;
     border: none;
     border-radius: 18px;
-    font-size: xx-small;
-    width: 85px;
-    height: 35px;
+    font-size: 12px;
+    width: 90px;
+    height: 40px;
 }
