--- a/src/components/Forms/styles.css
+++ b/src/components/Forms/styles.css
@@ -41,3 +41,11 @@ input{
     text-align: center;
     
 }
+.form2{
+    padding: 19px;
+    width: 400px;
+}
+.form3{
+    padding: 19px;
+    width: 400px;
+}
