--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,14 @@
     margin-left: 32%;
     margin-right: 32%;
     gap: 15px;
-
+    font-size: large;
 }
 .body-text{
     text-align: center;
 }
 .form-body{
     display: flex;
-    padding: 20px;
+    padding: 28px;
     border: 1px solid lightgray;
     border-radius: 10px;
     flex-direction: column;
@@ -39,4 +39,5 @@
     background-color: transparent;
      border: 1px solid #4A3AFF; 
      color: #4A3AFF;
+     width: 100px;
 }
